# justhost-assignment

./: .dockerignore  .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  schema.yml
core/: settings.py  urls.py
scripts/: tests.sh
vps/: apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
vps/migrations/: 0001_initial.py
